--- a/webapp/public/main.css
+++ b/webapp/public/main.css
@@ -1,390 +1,261 @@
-body, .tooltip
- {
-  font-family: 'Open Sans', sans-serif;
+
+
+* {
+  margin: 0px;
+  padding: 0px;
 }
 
-#flash {
-  opacity: 1;
-  transition: opacity .33s;
-  will-change: opacity;
-}
-
-.header-bar {
-  background-color: transparent;
-}
-
-.container--narrow {
-  max-width: 732px;
-}
-
-.header-search-icon {
-  position: relative;
-  top: 3px;
-}
-
-.header-chat-icon {
-  cursor: pointer;
-  position: relative;
-  top: 3px;
-}
-
-.avatar-large {
-  width: 80px;
-  height: 80px;
-  border-radius: 16px;
-  margin-right: 5px;
-  position: relative;
-  top: -3px;
-}
-
-.avatar-small {
-  width: 32px;
-  height: 32px;
-  border-radius: 16px;
-  margin-right: 5px;
-  position: relative;
-  top: -3px;
-}
-
-.avatar-tiny {
-  width: 24px;
-  height: 24px;
-  border-radius: 12px;
-  margin-right: 4px;
-  position: relative;
-  top: -1px;
-}
-
-.form-control-title {
-  font-size: 2rem;
-  font-weight: 500;
-}
-
-.body-content {
-  font-size: 1.2rem;
-  line-height: 1.75;
-  color: #292929;
-}
-
-.body-content p,
-.body-content ul,
-.body-content ol {
-  margin-bottom: 1.75rem
-}
-
-.input-dark {
-  background-color: #444;
-  border-color: transparent;
-  color: #FFFFFF;
-}
-
-.input-dark:focus {
-  color: #FFFFFF;
-  background-color: #555;
-  border-color: #80bdff;
-  outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
-}
-
-.input-dark::-webkit-input-placeholder {color: #888;}
-.input-dark::-moz-placeholder {color: #888;}
-.input-dark:-ms-input-placeholder {color: #888;}
-.input-dark:-moz-placeholder {color: #888;}
-
-@media (min-width: 768px) {
-  .input-dark {
-   width: auto;
-  }
-}
-
-.display-3 {
-  font-size: 4.35rem;
-}
-
-@media (max-width: 768px) {
-  .display-3 {font-size: 2.5rem}
-}
-
-.form-group {
-  position: relative;
-}
-
-.liveValidateMessage {
-  transition: all .5s ease-out;
-  top: -6px;
+.slider{
+  overflow: hidden;
+  width: 100%;
+  height: 100vh;
   position: absolute;
   z-index: 1;
-  padding-top: 6px;
-  padding-bottom: 16px;
-  opacity: 0;
-  transform: translateY(100%)
+  font: 20px 'Quicksand', Calibri;
+
+}
+.slider form{
+  float: right;
 }
 
-.liveValidateMessage--visible {
-  opacity: 1;
-  transform: translateY(0)
+.slider figure div{
+  float: left;
+  width: 20%;
 }
 
-.form-group input,
-.form-group textarea {
-  position: relative;
-  z-index: 2;
-}
-
-textarea.tall-textarea {
-  height: 160px;
-}
-
-@media (min-width: 768px) {
-  textarea.tall-textarea {
-    height: 320px;
-  }
-}
-
-.delete-post-button {
-  cursor: pointer;
-  background: none;
-  border: none;
-  padding: 0;
-  margin: 0;
-}
-
-/* Search Overaly */
-.search-overlay {
-  display: flex;
-  flex-direction: column;
-  position: fixed;
-  z-index: 500;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background-color: rgba(215, 215, 215, 0.911);
-  visibility: hidden;
-  opacity: 0;
-  transform: scale(1.3);
-  transition: .33s visibility ease-in-out, .33s opacity ease-in-out, .33s transform ease-in-out;
-  will-change: visibility, transform, opacity;
-}
-
-.search-overlay--visible {
-  visibility: visible;
-  opacity: 1;
-  transform: scale(1);
-}
-
-.search-overlay-icon {
-  color: #007bff;
-  font-size: 1.4rem;
-  margin: 0;
-  margin-right: 10px;
-}
-
-.live-search-field {
-  background-color: transparent;
-  border: none;
-  font-size: 1.1rem;
-  outline: none;
-  flex: 1;
-  color: #007bff;
-}
-
-.live-search-results {
-  opacity: 0;
-  transition: all .3s ease-out;
-  transform: scale(1.07)
-}
-
-.live-search-results--visible {
-  opacity: 1;
-  transform: scale(1)
-}
-
-.search-overlay-top {
-  background-color: #FFF;
-  /* background-color: rgba(0, 0, 0, .79); */
-}
-
-.search-overlay-top .container {
-  position: relative;
-  display: flex;
-  align-items: center;
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
-
-.search-overlay-bottom {
-  overflow: auto;
-}
-
-.close-live-search {
-  font-size: 1.5rem;
-  cursor: pointer;
-  opacity: .75;
-  line-height: 1;
-  color: #292929;
-}
-
-@media (min-width: 700px) {
-  .live-search-field {
-    font-size: 2.5rem;
-  }
-
-  .close-live-search {
-    font-size: 3rem;
-  }
-
-  .search-overlay-icon {
-    font-size: 3rem;
-  }
-}
-
-.close-live-search:hover {
-  opacity: 1;
-}
-
-@-webkit-keyframes spin {
-  100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-}
-@keyframes spin {
-  100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-}
-
-.circle-loader {
-  opacity: 0;
-  transition: opacity .45s ease-out, visibility .45s ease-out;
-  visibility: hidden;
-  position: absolute;
-  left: 50%;
-  box-sizing: border-box;
-  width: 65px;
-  height: 65px;
-  border-radius: 100%;
-  border: 10px solid rgba(73, 80, 87, 0.2);
-  border-top-color: #495057;
-  will-change: -webkit-transform, transform;
-  -webkit-transform: rotate(0deg);
-          transform: rotate(0deg);
-  -webkit-animation: spin 1s infinite linear;
-          animation: spin 1s infinite linear;
-}
-
-.circle-loader--visible {
-  visibility: visible;
-  opacity: 1;
-}
-
-/* End Search Overlay */
-
-/* Chat */
-.chat-wrapper {
-  position: fixed;
-  z-index: 5;
-  bottom: 0;
-  right: 20px;
-  width: 290px;
-  height: 350px;
-  background-color: #FFF;
-  display: flex;
-  flex-direction: column;
-  transition: all .4s ease-in-out;
-  opacity: 0;
-  transform: translateY(100%)
-}
-
-.chat--visible {
-  opacity: 1;
-  transform: translateY(0)
-}
-
-.chat-title-bar {
-  background-color: #292929;
-  color: #FFF;
-  padding: 4px 7px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.chat-title-bar-close {
-  opacity: .7;
-  cursor: pointer;
-}
-
-.chat-title-bar-close:hover {
-  opacity: 1;
-}
-
-.chat-log {
-  padding: 8px;
-  flex: 1;
-  overflow: auto;
-}
-
-.chat-self,
-.chat-other {
-  font-size: .75rem;
-  display: flex;
-  align-items: center;
-  margin-bottom: 7px;
-}
-
-.chat-self {
-  padding-left: 25%;
-}
-
-.chat-self .chat-avatar {
-  margin-left: 6px;
-}
-
-.chat-self .chat-message {
-  flex: 1;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.chat-self .chat-message-inner {
-  text-align: right;
-  padding: 4px 7px;
-  border-radius: 12px;
-  background-color: #007bff;
-  color: #FFF;
-}
-
-.chat-other {
-  padding-right: 25%;
-}
-
-.chat-other .chat-avatar {
-  margin-right: 6px;
-}
-
-.chat-other .chat-message {
-  flex: 1;
-  display: flex;
-  justify-content: flex-start;
-}
-
-.chat-other .chat-message-inner {
-  padding: 4px 7px;
-  border-radius: 12px;
-  background-color: #f1f0f0;
-}
-
-.chat-message a {
-  color: #212529
-}
-
-.chat-field {
+.slider figure img{
   width: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  float: left;
+  background: rgba(236, 230, 219, 255);
+}
+
+.slider figure{
+  position: relative;
+  width: 500%;
+  margin: 0;
+  animation: animate 60s infinite;
+}
+
+.slide h1{
+  position: absolute;
+  text-align: left;
+  font-size: 60px;
+  padding-top: 250px;
+  padding-left: 50px;
+  width: 100%;
+  height: 100vh;
+
+}
+
+.slide p{
+  position: absolute;
+  text-align: left;
+  font-size: 20px;
+  padding-top: 350px;
+  padding-left: 50px;
+  width: 100%;
+  height: 100vh;
+  
+}
+
+@keyframes animate{
+  0%{left:0%;}
+  10%{left:0%;}
+  12%{left:-100%;}
+  22%{left:-100%;}
+  24%{left:-200%;}
+  34%{left:-200%;}
+  36%{left:-300%;}
+  46%{left:-300%;}
+  48%{left:-400%;}
+  58%{left:-400%;}
+  60%{left:-300%;}
+  70%{left:-300%;}
+  72%{left:-200%;}
+  82%{left:-200%;}
+  84%{left:-100%;}
+  94%{left:-100%;}
+  96%{left:-0%;}
+}
+
+
+
+.forum {
+  font: 20px 'Quicksand', Calibri;
+  width: 400px;
+  max-width: 400px;
+  margin: 4rem;
+  padding: 2rem;
+  box-shadow: 0 0 15px rgb(0, 0, 0);
+  float: right;
+  border-radius: 50px;
+  background: white;
+  position: absolute;
+  z-index: 2;
+  margin-left: 1000px;
+  margin-top: 140px;
+
+}
+
+.form_input,
+.form_button {
+  font: 'Quicksand', Calibri;
+}
+
+.form-hidden {
+  display: none;
+}
+
+.form>*:first-child {
+  margin-top: 0;
+}
+
+.form>*:last-child {
+  margin-bottom: 0;
+}
+
+/* Title Styles */
+.form_title {
+  margin: 2rem 2rem 0 0;
+  text-align: center;
+
+  width: 100%;
+}
+
+/* Success/Error Message Styles (YET TO BE USED) */
+.form_message {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.form_message--success {
+  color: #4bb544;
+}
+
+.form_message--error {
+  color: #cc3333;
+}
+
+/* Input Styles */
+.form_input-group {
+  margin-bottom: 1rem;
+  display: flex;
+  /* Extremely Important for keeping the labels and text-fields inline*/
+  font-size: 19px;
+}
+
+/* Label Styles */
+label {
+  margin-right: 10px;
+  margin-left: 20px;
+  width: 100%;
+  text-align: left;
+}
+
+/* Text-Fields Styles */
+.form_input {
+  object-fit: fill;
+  text-align: left;
+  max-height: 36px;
   box-sizing: border-box;
-  padding: 10px 7px;
-  border: none;
+  border: 1px solid rgb(176, 170, 170);
   outline: none;
-  font-size: .75rem;
+  background: #ffffff;
+  transition: background 0.2s, border-color 0.2s;
+  margin-right: 20px;
+}
+
+/* Drop Down Select Box Styles */
+.form_select {
+  width: 100%;
+  text-align: left;
+  max-height: 36px;
+  box-sizing: border-box;
+  border: 1px solid black;
+  outline: none;
+  background: #ece6db;
+  transition: background 0.2s, border-color 0.2s;
+  margin-right: 20px;
+}
+
+.form_input:focus {
+  border-color: #506e53;
+  background: #ffffff;
+}
+
+.form_input--error {
+  color: #cc3333;
+  border-color: #ffffff;
+}
+
+.form_input-error-message {
+  color: #cc3333;
+}
+
+/* Main Button Styles */
+.form_button {
+  width: 236px;
+  margin: 10px;
+  padding: 1rem 1rem;
+  margin-left: 6rem;
+  color: #ffffff;
+  font-size: 18px;
+  border: none;
+  border-radius: 12px;
+  outline: none;
+  cursor: pointer;
+  background: #68a66f;
+}
+
+/* Button Interactivity */
+.form_button:hover {
+  background: #486a4c;
+}
+
+.form_button:active {
+  transform: scale(0.98);
+}
+
+/* Back Button Styles */
+.form_back {
+  margin-left: 12rem;
+  height: 20px;
+  width: 60px;
+  padding: 2px;
+  color: #000000;
+  border: solid black 1px;
+  border-radius: 5px;
+  cursor: pointer;
+  background: #afb1af;
+  text-align: center;
+}
+
+/* Specific Enter Button In Forgotten Password Styles */
+#forgotpasswordEnter {
+  width: 146px;
+  height: 65px;
+  margin-bottom: 188px;
+  text-align: center;
+}
+
+/* Back Button Interactivity */
+.form_back:hover {
+  background: #7d7d7d;
+  color: #ffffff;
+}
+
+.form_back:active {
+  transform: scale(0.98);
+}
+
+.form_text {
+  text-align: center;
+  font-size: 18px;
+}
+
+h2{
+  text-align: center;
 }
