--- a/webapp/views/home-dashboard.ejs
+++ b/webapp/views/home-dashboard.ejs
@@ -1,4 +1,4 @@
-<%- include('includes/header') %>
+<%- include('includes/header-copy') %>
 <!-- header included end -->  
 
   <div class="container py-md-5 container--narrow">
