--- a/webapp/views/includes/header.ejs
+++ b/webapp/views/includes/header.ejs
@@ -11,41 +11,14 @@
   <link rel="stylesheet" href="/main.css">
 </head>
 <body>
-  <header class="header-bar mb-3">
+  <header>
+  <!-- <header class="header-bar mb-3">
     <div class="container d-flex flex-column flex-md-row align-items-center p-3">
-      <h4 class="my-0 mr-md-auto font-weight-normal"><a href="/" class="" style="color: #292929">FLOC</a></h4>
+      <h4 class="my-0 mr-md-auto font-weight-normal"><a href="/" class="" style="color: #292929">FLOC</a></h4> -->
      
-       <% if (user) { %>
-        <div class="flex-row my-3 my-md-0">
-            <a href="#" class="text-white mr-2 header-search-icon" title="Search" data-toggle="tooltip" data-placement="bottom"><i class="fas fa-search"></i></a>
-            <span class="text-white mr-2 header-chat-icon" title="Chat" data-toggle="tooltip" data-placement="bottom"><i class="fas fa-comment"></i></span>
-            <!-- Gravatar API SRC= -->
-            <a href="/profile/<%= user.username %>" class="mr-2"><img title="My Profile" data-toggle="tooltip" data-placement="bottom" style="width: 32px; height: 32px; border-radius: 16px;" src="<%= user.avatar %>"></a>
-            <a class="btn btn-sm btn-success mr-2" href="/create-post">Create Post</a>
-            <!-- Session logout ACTION=/LOGOUT -->
-            <form action="/logout" method="POST" class="d-inline">
-              <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-              <button class="btn btn-sm btn-secondary">Sign Out</button>
-            </form>
-          </div>  
+      <input type="hidden" name="_csrf" value="<%= csrfToken %>">
 
-     <%  } else { %>
-         <!-- Login form start ACTION=/login -->
-      <form action="/login" method="POST" class="mb-0 pt-2 pt-md-0">
-        <div class="row align-items-center">
-          <div class="col-md mr-0 pr-md-0 mb-3 mb-md-0">
-            <input name="username" class="form-control form-control-sm input-dark" type="text" placeholder="Username" autocomplete="off">
-          </div>
-          <div class="col-md mr-0 pr-md-0 mb-3 mb-md-0">
-            <input name="password" class="form-control form-control-sm input-dark" type="password" placeholder="Password">
-          </div>
-          <div class="col-md-auto">
-            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <button class="btn btn-primary btn-sm">Sign In</button>
-          </div>
-        </div>
-       </form>   
-      <%  } %>
+      
         
     </div>
   </header>
