--- a/Floc/style.css
+++ b/Floc/style.css
@@ -258,6 +258,10 @@ h2{
     text-align: center;
 }
 
+#map {
+    height: 400px; /* The height is 400 pixels */
+    width: 100%; /* The width is the width of the web page */
+  }
 
 /**
 <div class="container">
