--- a/webapp/public/main.css
+++ b/webapp/public/main.css
@@ -1,9 +1,19 @@
-
-
 * {
   margin: 0px;
   padding: 0px;
+  box-sizing: border-box;
+  font-family: "Quicksand", sans-serif;
 }
+
+body {
+  /* background-color: #b4ceaa; */
+  font: 20px "Quicksand", "Calibri";
+}
+
+/* h1 {
+  margin-top: 1rem;
+  text-align: center;
+} */
 
 .slider{
   overflow: hidden;
@@ -80,8 +90,6 @@
   94%{left:-100%;}
   96%{left:-0%;}
 }
-
-
 
 .forum {
   font: 20px 'Quicksand', Calibri;
@@ -260,10 +268,250 @@ h2{
   text-align: center;
 }
 
+/* dashboard css start  */
+/* dashboard css start */
+/* dashboard css start */
+
+#profile_img {
+  border-radius: 50%;
+  position: relative;
+}
+
+#name {
+  color: black;
+}
+
+#profile_widget {
+  width: 18rem;
+  height: 15rem;
+  text-align: center;
+  border-radius: 10%;
+}
+
+#maps_widget {
+  border-radius: 10%;
+}
+
+#map {
+  width: 640px;
+  height: 300px;
+  border-radius: 10%;
+  z-index: 100;
+}
+
+#calendar_widget {
+  width: 25rem;
+  height: 14rem;
+  text-align: center;
+  border-radius: 15%;
+}
+
+#container {
+  display: flex;
+  background-color: aliceblue;
+  align-content: left;
+  justify-content: left;
+  padding-left: 10px;
+}
+
+#container div {
+  margin: 15px;
+  align-items: left;
+}
+
+#container2 {
+  display: flex;
+  background-color: aliceblue;
+  align-content: left;
+  justify-content: left;
+  padding-left: 10px;
+}
+
+#container2 div {
+  margin: 15px;
+  align-items: left;
+}
+
+#widget4 {
+  width: 18rem;
+  height: 12rem;
+  text-align: center;
+  border-radius: 10%;
+}
+
+#widget5 {
+  height: 22rem;
+  border-radius: 8%;
+}
+
+#widget6 {
+  width: 25rem;
+  height: 23rem;
+  text-align: center;
+  border-radius: 15%;
+  text-align: left;
+}
+
+#widget6 p {
+  font-size: 14px;
+}
+
+#attraction {
+  width: 12rem;
+  height: 8rem;
+
+  align-content: center;
+}
+
+/**CALENDER STYLE**/
+* {
+  margin: 0;
+  padding: 0;
+ 
+}
+
+html {
+  font-size: 62.5%;
+}
+
+/* .container {
+  width: 100%;
+  height: 100vh;
+  background-color: turquoise;
+  color: #eee;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
+
+.calendar {
+  width: 45rem;
+  height: 52rem;
+  background-color: #181617;
+  box-shadow: 0 0.5rem 3rem rgba(0, 0, 0, 0.4);
+}
+
+.month {
+  width: 100%;
+  height: 12rem;
+  background-color: darkolivegreen;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 2rem;
+  text-align: center;
+  text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
+}
+
+.month i {
+  font-size: 2.5rem;
+  cursor: pointer;
+}
+
+.month h1 {
+  font-size: 3rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  margin-bottom: 1rem;
+}
+
+.month p {
+  font-size: 1.6rem;
+}
+
+.weekdays {
+  width: 100%;
+  height: 5rem;
+  padding: 0 0.4rem;
+  display: flex;
+  align-items: center;
+}
+
+.weekdays div {
+  font-size: 1.5rem;
+  font-weight: 400;
+  letter-spacing: 0.1rem;
+  width: calc(44.2rem / 7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
+}
+
+.days {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0.2rem;
+}
+
+.days div {
+  font-size: 1.4rem;
+  margin: 0.3rem;
+  width: calc(40.2rem / 7);
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-shadow: 0 0.3rem 0.5rem rgba(236, 228, 228, 0.5);
+  transition: background-color 0.2s;
+}
+
+.days div:hover:not(.today) {
+  background-color: #b47017;
+  border: 0.2rem solid #777;
+  cursor: pointer;
+}
+
+.prev-date,
+.next-date {
+  opacity: 0.5;
+}
+
+.today {
+  background-color: #0a9f8d;
+}
+
 
 /* 
 /*-- Dami's functional styling code start 
 */
+
+.header-container-visible {
+ display: none;
+}
+
+.dash-container {
+  margin: 0 auto;
+}
+
+.avatar-large {
+  width: 80px;
+  height: 80px;
+  margin-right: 5px;
+  position: relative;
+  top: -10px;
+}
+
+.avatar-small {
+  width: 32px;
+  height: 32px;
+  border-radius: 16px;
+  margin-right: 5px;
+  position: relative;
+  top: -3px;
+}
+
+.avatar-tiny {
+  width: 24px;
+  height: 24px;
+  border-radius: 12px;
+  margin-right: 4px;
+  position: relative;
+  top: -1px;
+}
+
 
 #flash {
   opacity: 1;
@@ -296,3 +544,150 @@ h2{
   }
 
 }
+
+/* Search Overaly */
+.search-overlay {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  z-index: 500;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(215, 215, 215, 0.911);
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(1.3);
+  transition: .33s visibility ease-in-out, .33s opacity ease-in-out, .33s transform ease-in-out;
+  will-change: visibility, transform, opacity;
+}
+
+.search-overlay--visible {
+  visibility: visible;
+  opacity: 1;
+  transform: scale(1);
+}
+
+.search-overlay-icon {
+  color: #007bff;
+  font-size: 1.4rem;
+  margin: 0;
+  margin-right: 10px;
+}
+
+.live-search-field {
+  background-color: transparent;
+  border: none;
+  font-size: 1.1rem;
+  outline: none;
+  flex: 1;
+  color: #007bff;
+}
+
+.live-search-results {
+  opacity: 0;
+  transition: all .3s ease-out;
+  transform: scale(1.07)
+}
+
+.live-search-results--visible {
+  opacity: 1;
+  transform: scale(1)
+}
+
+.search-overlay-top {
+  background-color: #FFF;
+  /* background-color: rgba(0, 0, 0, .79); */
+}
+
+.search-overlay-top .container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.search-overlay-bottom {
+  overflow: auto;
+}
+
+.close-live-search {
+  font-size: 1.5rem;
+  cursor: pointer;
+  opacity: .75;
+  line-height: 1;
+  color: #292929;
+}
+
+@media (min-width: 700px) {
+  .live-search-field {
+    font-size: 2.5rem;
+  }
+
+  .close-live-search {
+    font-size: 3rem;
+  }
+
+  .search-overlay-icon {
+    font-size: 3rem;
+  }
+}
+
+.close-live-search:hover {
+  opacity: 1;
+}
+
+@-webkit-keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+@keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+.circle-loader {
+  opacity: 0;
+  transition: opacity .45s ease-out, visibility .45s ease-out;
+  visibility: hidden;
+  position: absolute;
+  left: 50%;
+  box-sizing: border-box;
+  width: 65px;
+  height: 65px;
+  border-radius: 100%;
+  border: 10px solid rgba(73, 80, 87, 0.2);
+  border-top-color: #495057;
+  will-change: -webkit-transform, transform;
+  -webkit-transform: rotate(0deg);
+          transform: rotate(0deg);
+  -webkit-animation: spin 1s infinite linear;
+          animation: spin 1s infinite linear;
+}
+
+.circle-loader--visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+.container--narrow {
+  max-width: 732px;
+}
+
+.header-search-icon {
+  position: relative;
+  top: 3px;
+}
+
+.header-search-icon {
+  position: relative;
+  top: 3px;
+}
+
+/* End Search Overlay */
