--- a/webapp/views/includes/header.ejs
+++ b/webapp/views/includes/header.ejs
@@ -28,11 +28,8 @@
 
 <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 <script src="/googleMaps/index_maps.js"></script>
-
-  <link rel="stylesheet" type="text/css" href="/style.css"/>
- 
- 
-  <link rel="stylesheet" href="/main.css">
+<link rel="stylesheet" type="text/css" href="/main.css">
+<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
   <header>
