--- a/webapp/public/main.css
+++ b/webapp/public/main.css
@@ -7,13 +7,8 @@
 
 body {
   /* background-color: #b4ceaa; */
-  font: 20px "Quicksand", "Calibri";
+  font-family: "Quicksand", "Calibri";
 }
-
-/* h1 {
-  margin-top: 1rem;
-  text-align: center;
-} */
 
 .slider{
   overflow: hidden;
@@ -24,6 +19,7 @@ body {
   font: 20px 'Quicksand', Calibri;
 
 }
+
 .slider form{
   float: right;
 }
@@ -57,7 +53,6 @@ body {
   padding-left: 50px;
   width: 100%;
   height: 100vh;
-
 }
 
 .slide p{
@@ -105,7 +100,6 @@ body {
   z-index: 2;
   margin-left: 1000px;
   margin-top: 140px;
-
 }
 
 .form_input,
@@ -129,7 +123,6 @@ body {
 .form_title {
   margin: 2rem 2rem 0 0;
   text-align: center;
-
   width: 100%;
 }
 
@@ -268,7 +261,8 @@ h2{
   text-align: center;
 }
 
-/* dashboard css start  */
+
+/* dashboard css start */
 /* dashboard css start */
 /* dashboard css start */
 
@@ -279,6 +273,7 @@ h2{
 
 #name {
   color: black;
+  margin-right: .9rem;
 }
 
 #profile_widget {
@@ -288,8 +283,16 @@ h2{
   border-radius: 10%;
 }
 
+.profile--widget--bottom {
+  justify-content: center;
+  display: flex;
+}
+
 #maps_widget {
+  padding: 0rem;
   border-radius: 10%;
+  border: solid 1px #D2D2D2;
+  background-color: white;
 }
 
 #map {
@@ -300,7 +303,7 @@ h2{
 }
 
 #calendar_widget {
-  width: 25rem;
+  width: 20rem;
   height: 14rem;
   text-align: center;
   border-radius: 15%;
@@ -311,12 +314,11 @@ h2{
   background-color: aliceblue;
   align-content: left;
   justify-content: left;
-  padding-left: 10px;
+  /* padding-left: 10px; */
 }
 
 #container div {
   margin: 15px;
-  align-items: left;
 }
 
 #container2 {
@@ -340,7 +342,7 @@ h2{
 }
 
 #widget5 {
-  height: 22rem;
+  /* height: 22rem; */
   border-radius: 8%;
 }
 
@@ -364,15 +366,8 @@ h2{
 }
 
 /**CALENDER STYLE**/
-* {
-  margin: 0;
-  padding: 0;
- 
-}
-
-html {
-  font-size: 62.5%;
-}
+/**CALENDER STYLE**/
+/**CALENDER STYLE**/
 
 /* .container {
   width: 100%;
@@ -473,221 +468,3 @@ html {
   background-color: #0a9f8d;
 }
 
-
-/* 
-/*-- Dami's functional styling code start 
-*/
-
-.header-container-visible {
- display: none;
-}
-
-.dash-container {
-  margin: 0 auto;
-}
-
-.avatar-large {
-  width: 80px;
-  height: 80px;
-  margin-right: 5px;
-  position: relative;
-  top: -10px;
-}
-
-.avatar-small {
-  width: 32px;
-  height: 32px;
-  border-radius: 16px;
-  margin-right: 5px;
-  position: relative;
-  top: -3px;
-}
-
-.avatar-tiny {
-  width: 24px;
-  height: 24px;
-  border-radius: 12px;
-  margin-right: 4px;
-  position: relative;
-  top: -1px;
-}
-
-
-#flash {
-  opacity: 1;
-  transition: opacity .33s;
-  will-change: opacity;
-}
-
-.liveValidateMessage {
-  transition: all .5s ease-out;
-  top: -6px;
-  position: absolute;
-  z-index: 1;
-  padding-top: 6px;
-  padding-bottom: 16px;
-  opacity: 0;
-  transform: translateY(100%)
-}
-
-.liveValidateMessage--visible {
-  opacity: 1;
-  transform: translateY(0)
-}
-
-@media (min-width: 1200px) {
-
-  .forum {
-      margin-left: 820px;
-      margin-top: 140px;
-      float: right;
-  }
-
-}
-
-/* Search Overaly */
-.search-overlay {
-  display: flex;
-  flex-direction: column;
-  position: fixed;
-  z-index: 500;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background-color: rgba(215, 215, 215, 0.911);
-  visibility: hidden;
-  opacity: 0;
-  transform: scale(1.3);
-  transition: .33s visibility ease-in-out, .33s opacity ease-in-out, .33s transform ease-in-out;
-  will-change: visibility, transform, opacity;
-}
-
-.search-overlay--visible {
-  visibility: visible;
-  opacity: 1;
-  transform: scale(1);
-}
-
-.search-overlay-icon {
-  color: #007bff;
-  font-size: 1.4rem;
-  margin: 0;
-  margin-right: 10px;
-}
-
-.live-search-field {
-  background-color: transparent;
-  border: none;
-  font-size: 1.1rem;
-  outline: none;
-  flex: 1;
-  color: #007bff;
-}
-
-.live-search-results {
-  opacity: 0;
-  transition: all .3s ease-out;
-  transform: scale(1.07)
-}
-
-.live-search-results--visible {
-  opacity: 1;
-  transform: scale(1)
-}
-
-.search-overlay-top {
-  background-color: #FFF;
-  /* background-color: rgba(0, 0, 0, .79); */
-}
-
-.search-overlay-top .container {
-  position: relative;
-  display: flex;
-  align-items: center;
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
-
-.search-overlay-bottom {
-  overflow: auto;
-}
-
-.close-live-search {
-  font-size: 1.5rem;
-  cursor: pointer;
-  opacity: .75;
-  line-height: 1;
-  color: #292929;
-}
-
-@media (min-width: 700px) {
-  .live-search-field {
-    font-size: 2.5rem;
-  }
-
-  .close-live-search {
-    font-size: 3rem;
-  }
-
-  .search-overlay-icon {
-    font-size: 3rem;
-  }
-}
-
-.close-live-search:hover {
-  opacity: 1;
-}
-
-@-webkit-keyframes spin {
-  100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-}
-@keyframes spin {
-  100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-}
-
-.circle-loader {
-  opacity: 0;
-  transition: opacity .45s ease-out, visibility .45s ease-out;
-  visibility: hidden;
-  position: absolute;
-  left: 50%;
-  box-sizing: border-box;
-  width: 65px;
-  height: 65px;
-  border-radius: 100%;
-  border: 10px solid rgba(73, 80, 87, 0.2);
-  border-top-color: #495057;
-  will-change: -webkit-transform, transform;
-  -webkit-transform: rotate(0deg);
-          transform: rotate(0deg);
-  -webkit-animation: spin 1s infinite linear;
-          animation: spin 1s infinite linear;
-}
-
-.circle-loader--visible {
-  visibility: visible;
-  opacity: 1;
-}
-
-.container--narrow {
-  max-width: 732px;
-}
-
-.header-search-icon {
-  position: relative;
-  top: 3px;
-}
-
-.header-search-icon {
-  position: relative;
-  top: 3px;
-}
-
-/* End Search Overlay */
