--- a/webapp/public/style.css
+++ b/webapp/public/style.css
@@ -1,272 +1,219 @@
-* {
-    margin: 0px;
-    padding: 0px;
-}
-
-.slider{
-    overflow: hidden;
-    width: 100%;
-    height: 100vh;
-    position: absolute;
-    z-index: 1;
-    font: 20px 'Quicksand', Calibri;
-
-}
-.slider form{
-    float: right;
-}
-
-.slider figure div{
-    float: left;
-    width: 20%;
-}
-
-.slider figure img{
-    width: 100%;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    float: left;
-    background: rgba(236, 230, 219, 255);
-}
-
-.slider figure{
-    position: relative;
-    width: 500%;
-    margin: 0;
-    animation: animate 60s infinite;
-}
-
-.slide h1{
-    position: absolute;
-    text-align: left;
-    font-size: 60px;
-    padding-top: 250px;
-    padding-left: 50px;
-    width: 100%;
-    height: 100vh;
-
-}
-
-.slide p{
-    position: absolute;
-    text-align: left;
-    font-size: 20px;
-    padding-top: 350px;
-    padding-left: 50px;
-    width: 100%;
-    height: 100vh;
-    
-}
-
-@keyframes animate{
-    0%{left:0%;}
-    10%{left:0%;}
-    12%{left:-100%;}
-    22%{left:-100%;}
-    24%{left:-200%;}
-    34%{left:-200%;}
-    36%{left:-300%;}
-    46%{left:-300%;}
-    48%{left:-400%;}
-    58%{left:-400%;}
-    60%{left:-300%;}
-    70%{left:-300%;}
-    72%{left:-200%;}
-    82%{left:-200%;}
-    84%{left:-100%;}
-    94%{left:-100%;}
-    96%{left:-0%;}
-}
+/* 
+/*-- Dami's functional styling code start 
+*/
 
 
 
-.forum {
-    font: 20px 'Quicksand', Calibri;
-    width: 400px;
-    max-width: 400px;
-    margin: 4rem;
-    padding: 2rem;
-    box-shadow: 0 0 15px rgb(0, 0, 0);
-    float: right;
-    border-radius: 50px;
-    background: white;
-    position: absolute;
-    z-index: 2;
-    margin-left: 1000px;
-    margin-top: 140px;
-
-}
-
-.form_input,
-.form_button {
-    font: 'Quicksand', Calibri;
-}
-
-.form-hidden {
+.header-container-visible {
     display: none;
 }
-
-.form>*:first-child {
-    margin-top: 0;
+   
+.dash-container {
+     margin: 0 auto;
+ }
+   
+.avatar-large {
+     width: 80px;
+     height: 80px;
+     margin-right: 5px;
+     position: relative;
+     top: -10px;
 }
-
-.form>*:last-child {
-    margin-bottom: 0;
+   
+.avatar-small {
+     width: 32px;
+     height: 32px;
+     border-radius: 16px;
+     margin-right: 5px;
+     position: relative;
+     top: -3px;
+   }
+   
+   .avatar-tiny {
+     width: 24px;
+     height: 24px;
+     border-radius: 12px;
+     margin-right: 4px;
+     position: relative;
+     top: -1px;
+   }
+   
+   
+   #flash {
+     opacity: 1;
+     transition: opacity .33s;
+     will-change: opacity;
+   }
+   
+   .liveValidateMessage {
+     transition: all .5s ease-out;
+     top: -6px;
+     position: absolute;
+     z-index: 1;
+     padding-top: 6px;
+     padding-bottom: 16px;
+     opacity: 0;
+     transform: translateY(100%)
+   }
+   
+   .liveValidateMessage--visible {
+     opacity: 1;
+     transform: translateY(0)
+   }
+   
+@media (min-width: 1200px) {
+   
+ .forum {
+         margin-left: 820px;
+         margin-top: 140px;
+         float: right;
+    }
 }
-
-/* Title Styles */
-.form_title {
-    margin: 2rem 2rem 0 0;
-    text-align: center;
-
-    width: 100%;
-}
-
-/* Success/Error Message Styles (YET TO BE USED) */
-.form_message {
-    text-align: center;
-    margin-bottom: 1rem;
-}
-
-.form_message--success {
-    color: #4bb544;
-}
-
-.form_message--error {
-    color: #cc3333;
-}
-
-/* Input Styles */
-.form_input-group {
-    margin-bottom: 1rem;
-    display: flex;
-    /* Extremely Important for keeping the labels and text-fields inline*/
-    font-size: 19px;
-}
-
-/* Label Styles */
-label {
-    margin-right: 10px;
-    margin-left: 20px;
-    width: 100%;
-    text-align: left;
-}
-
-/* Text-Fields Styles */
-.form_input {
-    object-fit: fill;
-    text-align: left;
-    max-height: 36px;
-    box-sizing: border-box;
-    border: 1px solid rgb(176, 170, 170);
-    outline: none;
-    background: #ffffff;
-    transition: background 0.2s, border-color 0.2s;
-    margin-right: 20px;
-}
-
-/* Drop Down Select Box Styles */
-.form_select {
-    width: 100%;
-    text-align: left;
-    max-height: 36px;
-    box-sizing: border-box;
-    border: 1px solid black;
-    outline: none;
-    background: #ece6db;
-    transition: background 0.2s, border-color 0.2s;
-    margin-right: 20px;
-}
-
-.form_input:focus {
-    border-color: #506e53;
-    background: #ffffff;
-}
-
-.form_input--error {
-    color: #cc3333;
-    border-color: #ffffff;
-}
-
-.form_input-error-message {
-    color: #cc3333;
-}
-
-/* Main Button Styles */
-.form_button {
-    width: 236px;
-    margin: 10px;
-    padding: 1rem 1rem;
-    margin-left: 6rem;
-    color: #ffffff;
-    font-size: 18px;
-    border: none;
-    border-radius: 12px;
-    outline: none;
-    cursor: pointer;
-    background: #68a66f;
-}
-
-/* Button Interactivity */
-.form_button:hover {
-    background: #486a4c;
-}
-
-.form_button:active {
-    transform: scale(0.98);
-}
-
-/* Back Button Styles */
-.form_back {
-    margin-left: 12rem;
-    height: 20px;
-    width: 60px;
-    padding: 2px;
-    color: #000000;
-    border: solid black 1px;
-    border-radius: 5px;
-    cursor: pointer;
-    background: #afb1af;
-    text-align: center;
-}
-
-/* Specific Enter Button In Forgotten Password Styles */
-#forgotpasswordEnter {
-    width: 146px;
-    height: 65px;
-    margin-bottom: 188px;
-    text-align: center;
-}
-
-/* Back Button Interactivity */
-.form_back:hover {
-    background: #7d7d7d;
-    color: #ffffff;
-}
-
-.form_back:active {
-    transform: scale(0.98);
-}
-
-.form_text {
-    text-align: center;
-    font-size: 18px;
-}
-
-h2{
-    text-align: center;
-}
-
-
-/**
-<div class="container">
-        
-    <div class="outer">
-        
-        <div class="details">
-            <h1>Welcome to Floc</h1>
-
-        </div>
-    </div>
-</div>
+   
+   /* Search Overaly */
+   .search-overlay {
+     display: flex;
+     flex-direction: column;
+     position: fixed;
+     z-index: 500;
+     top: 0;
+     left: 0;
+     bottom: 0;
+     right: 0;
+     background-color: rgba(215, 215, 215, 0.911);
+     visibility: hidden;
+     opacity: 0;
+     transform: scale(1.3);
+     transition: .33s visibility ease-in-out, .33s opacity ease-in-out, .33s transform ease-in-out;
+     will-change: visibility, transform, opacity;
+   }
+   
+   .search-overlay--visible {
+     visibility: visible;
+     opacity: 1;
+     transform: scale(1);
+   }
+   
+   .search-overlay-icon {
+     color: #007bff;
+     font-size: 1.4rem;
+     margin: 0;
+     margin-right: 10px;
+   }
+   
+   .live-search-field {
+     background-color: transparent;
+     border: none;
+     font-size: 1.1rem;
+     outline: none;
+     flex: 1;
+     color: #007bff;
+   }
+   
+   .live-search-results {
+     opacity: 0;
+     transition: all .3s ease-out;
+     transform: scale(1.07)
+   }
+   
+   .live-search-results--visible {
+     opacity: 1;
+     transform: scale(1)
+   }
+   
+   .search-overlay-top {
+     background-color: #FFF;
+     /* background-color: rgba(0, 0, 0, .79); */
+   }
+   
+   .search-overlay-top .container {
+     position: relative;
+     display: flex;
+     align-items: center;
+     padding-top: 15px;
+     padding-bottom: 15px;
+   }
+   
+   .search-overlay-bottom {
+     overflow: auto;
+   }
+   
+   .close-live-search {
+     font-size: 1.5rem;
+     cursor: pointer;
+     opacity: .75;
+     line-height: 1;
+     color: #292929;
+   }
+   
+   @media (min-width: 700px) {
+     .live-search-field {
+       font-size: 2.5rem;
+     }
+   
+     .close-live-search {
+       font-size: 3rem;
+     }
+   
+     .search-overlay-icon {
+       font-size: 3rem;
+     }
+   }
+   
+   .close-live-search:hover {
+     opacity: 1;
+   }
+   
+   @-webkit-keyframes spin {
+     100% {
+       -webkit-transform: rotate(360deg);
+               transform: rotate(360deg);
+     }
+   }
+   @keyframes spin {
+     100% {
+       -webkit-transform: rotate(360deg);
+               transform: rotate(360deg);
+     }
+   }
+   
+   .circle-loader {
+     opacity: 0;
+     transition: opacity .45s ease-out, visibility .45s ease-out;
+     visibility: hidden;
+     position: absolute;
+     left: 50%;
+     box-sizing: border-box;
+     width: 65px;
+     height: 65px;
+     border-radius: 100%;
+     border: 10px solid rgba(73, 80, 87, 0.2);
+     border-top-color: #495057;
+     will-change: -webkit-transform, transform;
+     -webkit-transform: rotate(0deg);
+             transform: rotate(0deg);
+     -webkit-animation: spin 1s infinite linear;
+             animation: spin 1s infinite linear;
+   }
+   
+   .circle-loader--visible {
+     visibility: visible;
+     opacity: 1;
+   }
+   
+   .container--narrow {
+     max-width: 732px;
+   }
+   
+   .header-search-icon {
+     position: relative;
+     top: 3px;
+   }
+   
+   .header-search-icon {
+     position: relative;
+     top: 3px;
+   }
+   
+   /* End Search Overlay */
+   
