--- a/webapp/public/style.css
+++ b/webapp/public/style.css
@@ -2,22 +2,29 @@
 /*-- Dami's functional styling code start 
 */
 
-
+.wrapper {
+  /* width: 100%; */
+  background-color: aliceblue;
+  margin-top: 1rem;
+  margin-right: 1rem;
+  margin-left: 1rem;
+}
 
 .header-container-visible {
     display: none;
 }
    
 .dash-container {
-     margin: 0 auto;
+     /* margin: 0 auto; */
  }
    
 .avatar-large {
-     width: 80px;
-     height: 80px;
-     margin-right: 5px;
+     width: 60px;
+     height: 60px;
+     margin-bottom: 0;
+     /* margin-right: 5px; */
      position: relative;
-     top: -10px;
+     /* top: -10px; */
 }
    
 .avatar-small {
@@ -217,3 +224,113 @@
    
    /* End Search Overlay */
    
+
+   /* chat */
+
+
+/* Chat */
+.chat-wrapper {
+  position: fixed;
+  z-index: 5;
+  bottom: 0;
+  right: 20px;
+  width: 290px;
+  height: 350px;
+  background-color: #FFF;
+  display: flex;
+  flex-direction: column;
+  transition: all .4s ease-in-out;
+  opacity: 0;
+  transform: translateY(100%)
+}
+
+.chat--visible {
+  opacity: 1;
+  transform: translateY(0)
+}
+
+.chat-title-bar {
+  background-color: #292929;
+  color: #FFF;
+  padding: 4px 7px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.chat-title-bar-close {
+  opacity: .7;
+  cursor: pointer;
+}
+
+.chat-title-bar-close:hover {
+  opacity: 1;
+}
+
+.chat-log {
+  padding: 8px;
+  flex: 1;
+  overflow: auto;
+}
+
+.chat-self,
+.chat-other {
+  font-size: .75rem;
+  display: flex;
+  align-items: center;
+  margin-bottom: 7px;
+}
+
+.chat-self {
+  padding-left: 25%;
+}
+
+.chat-self .chat-avatar {
+  margin-left: 6px;
+}
+
+.chat-self .chat-message {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.chat-self .chat-message-inner {
+  text-align: right;
+  padding: 4px 7px;
+  border-radius: 12px;
+  background-color: #007bff;
+  color: #FFF;
+}
+
+.chat-other {
+  padding-right: 25%;
+}
+
+.chat-other .chat-avatar {
+  margin-right: 6px;
+}
+
+.chat-other .chat-message {
+  flex: 1;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.chat-other .chat-message-inner {
+  padding: 4px 7px;
+  border-radius: 12px;
+  background-color: #f1f0f0;
+}
+
+.chat-message a {
+  color: #212529
+}
+
+.chat-field {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 10px 7px;
+  border: none;
+  outline: none;
+  font-size: .75rem;
+}
