--- a/Floc/style.css
+++ b/Floc/style.css
@@ -1,7 +1,219 @@
 * {
   margin: 0px;
   padding: 0px;
+  font-family: Arial, Helvetica, sans-serif;
 }
+
+
+
+        /* Layout */
+        
+        .gridcontainer {
+            display: grid;
+            grid-template-columns: 0.1fr 1fr 1fr 1fr 1fr;
+            grid-template-rows: 5em;
+            grid-auto-rows: 9.75em;
+            font-family: Arial, Helvetica, sans-serif;
+
+        }
+
+        div {
+            text-align: center;
+            font-weight: bolder;
+            font-size: 90px;
+            margin: 10px;
+            font-size: 40px;
+
+        }
+
+        .menu_item{
+            margin-top: -20px;     
+        }
+
+        .profile_widget {
+            /* border: 3px solid #46593f; */
+            background-color: white;
+            border-radius: 15%;
+            box-shadow: 0 0 8px rgb(56, 77, 48);
+          }
+
+        .maps_widget {
+            /* border: 3px solid rgb(139, 0, 93); */
+            background-color: white;
+            border-radius: 15%;
+            box-shadow: 0 0 8px rgb(56, 77, 48);
+
+        }
+
+                .weather_widget {
+            /* border: 3px solid purple; */
+            background-color: white;
+            border-radius: 15%;
+            box-shadow: 0 0 8px rgb(56, 77, 48);
+
+        }
+
+        .calendar_widget {
+            /* border: 3px solid green; */
+            background-color: white;
+            border-radius: 15%;
+            box-shadow: 0 0 8px rgb(56, 77, 48);
+
+        }
+
+        .emercency_services_widget {
+            /* border: 3px solid salmon; */
+            background-color: white;
+            border-radius: 15%;
+            box-shadow: 0 0 8px rgb(56, 77, 48);
+
+        }
+
+        .forum_widget {
+            /* border: 3px solid green; */
+            background-color: white;
+            border-radius: 15%;
+            box-shadow: 0 0 8px rgb(56, 77, 48);
+
+        }
+
+        .attractions_widget {
+            /* border: 3px solid salmon; */
+            background-color: white;
+            border-radius: 15%;
+            box-shadow: 0 0 8px rgb(56, 77, 48);
+
+        }
+
+        .item {
+            grid-row: 1 / span 1;
+        }
+
+        .item1 {
+            grid-column: 2 / span 1;
+            grid-row: 1 / span 2;
+        }
+
+        .item2 {
+            grid-column: 3 / span 2;
+            grid-row: 1 / span 3;
+            /* grid-row: 4 / span 2; */
+
+        }
+
+        .item3 {
+            grid-column: 5 / span 1;
+            grid-row: 1 / span 2;
+
+        }
+
+        .item4 {
+            grid-column: 1 / span 2;
+
+            grid-row: 3 / span 2;
+
+            /* grid-column: 3 / span 1; */
+        }
+
+        .item5 {
+            grid-column: 1 / span 2;
+
+            grid-row: 5 / span 1;
+
+            /* grid-column: 3 / span 1; */
+        }
+
+
+        .item6 {
+            grid-column: 3 / span 2;
+            grid-row: 4 / span 2;
+        }
+
+        .item7 {
+            grid-column: 5 / span 1;
+            grid-row: 3 / span 3;
+
+        }
+
+
+
+/* Map */
+#map {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Weather */
+.notification{
+  display: none;
+}
+
+.notification p{
+  color: #d40c20;
+  font-size: 20px;
+  margin: 0;
+  text-align: center;
+  padding: 0 0;
+}
+
+.weather-container{
+  width: 325px;
+  height: 190px;
+}
+
+.location p{
+  margin: 0;
+  padding: 10px;
+  color: #293251;
+  text-align: center;
+  font-size: 20px;
+}
+
+.weather-icon{
+  width: 300px;
+  height: 100px;
+}
+
+.weather-icon img{
+  display: block;
+  margin: 0 auto;
+}
+
+.temperature-value{
+  width: 300px;
+  height: 20px;
+}
+
+.temperature-value p{
+  padding: 0;
+  margin: 0;
+  color: #293251;
+  font-size: 20px;
+  text-align: center;
+  cursor: pointer;
+  font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.temperature-value span{
+  color: #293251;
+  font-size: 20px;
+}
+
+.temperature-description p{
+  /* padding: 8px; */
+  margin: 0;
+  color: #293251;
+  text-align: center;
+  font-size: 20px;
+}
+
+
+
+
+
+
+
+
 
 body {
   background-color: #b4ceaa;
@@ -68,73 +280,23 @@ h1 {
 }
 
 @keyframes animate {
-  0% {
-    left: 0%;
-  }
-
-  10% {
-    left: 0%;
-  }
-
-  12% {
-    left: -100%;
-  }
-
-  22% {
-    left: -100%;
-  }
-
-  24% {
-    left: -200%;
-  }
-
-  34% {
-    left: -200%;
-  }
-
-  36% {
-    left: -300%;
-  }
-
-  46% {
-    left: -300%;
-  }
-
-  48% {
-    left: -400%;
-  }
-
-  58% {
-    left: -400%;
-  }
-
-  60% {
-    left: -300%;
-  }
-
-  70% {
-    left: -300%;
-  }
-
-  72% {
-    left: -200%;
-  }
-
-  82% {
-    left: -200%;
-  }
-
-  84% {
-    left: -100%;
-  }
-
-  94% {
-    left: -100%;
-  }
-
-  96% {
-    left: -0%;
-  }
+  0% {left: 0%;}
+  10% {left: 0%;}
+  12% {left: -100%;}
+  22% {left: -100%;}
+  24% {left: -200%;}
+  34% {left: -200%;}
+  36% {left: -300%;}
+  46% {left: -300%;}
+  48% {left: -400%;}
+  58% {left: -400%;}
+  60% {left: -300%;}
+  70% {left: -300%;}
+  72% {left: -200%;}
+  82% {left: -200%;}
+  84% {left: -100%;}
+  94% {left: -100%;}
+  96% {left: -0%;}
 }
 
 .forum {
