--- a/webapp/public/main.css
+++ b/webapp/public/main.css
@@ -12,7 +12,7 @@ body {
 
 
 h1 {
-  margin-top: 1rem;
+  /* margin-top: 1rem; */
   text-align: center;
 }
 
@@ -281,16 +281,14 @@ label {
           font-family: Arial, Helvetica, sans-serif;
       }
 
-      div {
+      .gridcontainer div {
           text-align: center;
           font-weight: bolder;
-          font-size: 90px;
           margin: 10px;
           font-size: 40px;
-
       }
 
-      .menu_item{
+      .menu_item {
           margin-top: -20px;     
       }
 
