--- a/webapp/views/forum.ejs
+++ b/webapp/views/forum.ejs
@@ -1,11 +1,14 @@
 <div class="dash-container">
  <% if (posts.length) { %>
-    <p class="text-center mb-4"> Comunity Posts 
-        <a id="search-small" href="#" class="text-white mr-2 header-search-icon" title="Search" data-toggle="tooltip" data-placement="bottom"><i class="fas fa-search" style="color: black"></i></a>
-        <!-- <span class="text-white mr-2 header-chat-icon" title="Chat" data-toggle="tooltip" data-placement="bottom"><i class="fas fa-comment"></i></span> -->
-    </p> 
+   <div class="flex--box d-flex justify-content-center"> 
+   <p class="text-center" style="margin-top: 10px; font-size: 1.4rem;"> Comunity Posts </p>
+    <a id="search-small" href="#" class="header-search-icon" title="Search" data-toggle="tooltip" data-placement="bottom"><i class="fas fa-search" style="top: -50px; font-size: .9rem; color: black;"></i></a>
+    </div> 
     <div class="list-group">
       <% posts.forEach(function(post) { %>
+
+        
+
         <a href="/post/<%= post._id %>" class="list-group-item list-group-item-action">
           <img class="avatar-tiny" src="<%= post.author.avatar %>">
           <strong><%= post.title %></strong> <span class="text-muted small">by <%= post.author.username %> on <%= post.createdDate.getMonth() + 1 %>/<%= post.createdDate.getDate() %>/<%= post.createdDate.getFullYear() %> </span>
@@ -16,7 +19,8 @@
     <div class="text-center">
       <!-- EJS template -->
       <h2>Hello <strong><%= user.username %></strong>, your feed is empty.</h2>
-      <p class="lead text-muted">Your feed displays the latest posts from the people you follow. If you don&rsquo;t have any friends to follow that&rsquo;s okay; you can use the &ldquo;Search&rdquo; feature in the top menu bar to find content written by people with similar interests and then follow them.</p>
+      <p class="lead text-muted">
+        Your feed displays the latest posts from the people you follow. If you don&rsquo;t have any friends to follow that&rsquo;s okay; you can use the &ldquo;Search&rdquo; feature in the top menu bar to find content written by people with similar interests and then follow them.</p>
     </div>  
   <%  } %>
 
