--- a/webapp/views/forum.ejs
+++ b/webapp/views/forum.ejs
@@ -4,17 +4,19 @@
    <p class="text-center" style="margin-top: 10px; font-size: 1.4rem;"> Comunity Posts </p>
     <a id="search-small" href="#" class="header-search-icon" title="Search" data-toggle="tooltip" data-placement="bottom"><i class="fas fa-search" style="top: -50px; font-size: .9rem; color: black;"></i></a>
     </div> 
-    <div class="list-group">
+
+    <div class="list-group forum--list-group">
       <% posts.forEach(function(post) { %>
-
-        
-
-        <a href="/post/<%= post._id %>" class="list-group-item list-group-item-action">
+        <a href="/post/<%= post._id %>" class="list-group-item list-group-item-action text-start">
+          <strong class="forum--tilte"><%= post.title %></strong> 
+          <div class="forum--bottom text-start">
           <img class="avatar-tiny" src="<%= post.author.avatar %>">
-          <strong><%= post.title %></strong> <span class="text-muted small">by <%= post.author.username %> on <%= post.createdDate.getMonth() + 1 %>/<%= post.createdDate.getDate() %>/<%= post.createdDate.getFullYear() %> </span>
+          <span class="text-muted small">by <%= post.author.username %> on <%= post.createdDate.getMonth() + 1 %>/<%= post.createdDate.getDate() %>/<%= post.createdDate.getFullYear() %> </span>
+         </div>
         </a>
       <% }) %>
     </div>
+
  <%  } else { %>
     <div class="text-center">
       <!-- EJS template -->
