seperate CSS files

--- a/webapp/views/forum.ejs
+++ b/webapp/views/forum.ejs
@@ -1,7 +1,48 @@
+<style>
+
+
+    .forum--bottom span{
+      margin: 0;
+      padding: 0;
+      font-size: 17px;
+      text-align: left;
+    }
+
+    div.forum--bottom {
+    margin: 0;
+    padding: 0;
+    }
+
+    a.list-group-item {
+      margin: 0;
+      padding: 0;
+    }
+
+  .dash-container {
+   
+  }
+
+  a {
+    margin: 0;
+  }
+
+  div.forum--bottom {
+    margin: 0;
+  }
+  span {
+    margin: 0;
+  }
+
+  span.text-muted {
+    margin: 0;
+  }
+
+</style>
+
 <div class="dash-container">
  <% if (posts.length) { %>
    <div class="flex--box d-flex justify-content-center"> 
-   <p class="text-center" style="margin-top: 10px; font-size: 1.4rem;"> Comunity Posts </p>
+   <p class="text-center" style="margin: 0px; font-size: 17px;"> Comunity Posts </p>
     <a id="search-small" href="#" class="header-search-icon" title="Search" data-toggle="tooltip" data-placement="bottom"><i class="fas fa-search" style="top: -50px; font-size: .9rem; color: black;"></i></a>
     </div> 
 
