--- a/webapp/views/includes/header.ejs
+++ b/webapp/views/includes/header.ejs
@@ -23,11 +23,17 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="googleMaps/index_maps.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="/main.css">
-    <link rel="stylesheet" type="text/css" href="/style.css">
+    <!-- To add a new css file below -->
+
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/grid.css">
+    <link rel="stylesheet" type="text/css" href="/css/dami_style.css">
+
+    
     <link rel="stylesheet" href="/weather/font/Rimouski.css">
     <link rel="stylesheet" href="/weather/style.css">
 
+    <!-- Css file list End -->
 
 </head>
 <body>
