--- a/webapp/public/css/dami_style.css
+++ b/webapp/public/css/dami_style.css
@@ -2,7 +2,7 @@
 /*-- Dami's functional styling code start 
 */
 
-body, .tooltip
+.tooltip
  {
   font-family: 'Open Sans', sans-serif;
  }
@@ -70,6 +70,7 @@ body, .tooltip
      height: 24px;
      border-radius: 12px;
      margin-right: 4px;
+     margin-left: 5px;
      position: relative;
      top: -1px;
    }
@@ -77,19 +78,22 @@ body, .tooltip
    
 /* Forum  */
 
-.forum--list-group a {
+.forum--list-group {
+  height: auto;
+}
+
+.forum--list-group a{
+  margin: 0;
+  padding: 0;
   text-align: left;
-  font-size: .9rem;
+  /* font-size: .9rem; */
 }
 .forum--tilte {
-  font-size: 1.6rem;
+  font-size: 19px;
+  margin: 0;
   /* margin-bottom: 15px; */
 }
 
-.forum--bottom span{
-  font-size: .9rem;
-  text-align: left;
-}
 
    #flash {
      opacity: 1;
@@ -113,6 +117,7 @@ body, .tooltip
      transform: translateY(0)
    }
    
+
 @media (min-width: 1200px) {
    
  .forum {
@@ -262,12 +267,9 @@ body, .tooltip
      top: -5px;
    }
    
-   /* End Search Overlay */
+/* End Search Overlay */
    
-
-   /* chat */
-
-
+/* Chat */
 /* Chat */
 .chat-wrapper {
   position: fixed;
