--- a/webapp/public/css/main.css
+++ b/webapp/public/css/main.css
@@ -7,13 +7,13 @@
 
 body {
   background-color: #b4ceaa;
-  font: 20px "Quicksand", "Calibri";
+  /* font: 16px "Quicksand", "Calibri"; */
 }
-
 
 h1 {
   /* margin-top: 1rem; */
   text-align: center;
+  font-size: 20px;
 }
 
 
@@ -267,136 +267,6 @@ label {
   font-size: 18px;
 }
 
-/* dashboard css start */
-/* dashboard css start */
-/* dashboard css start */
-
-         /* Layout */
-        
-        .gridcontainer {
-          display: grid;
-          grid-template-columns: 0.1fr 1fr 1fr 1fr 1fr;
-          grid-template-rows: 5em;
-          grid-auto-rows: 9.75em;
-          font-family: Arial, Helvetica, sans-serif;
-      }
-
-      .gridcontainer div {
-          text-align: center;
-          font-weight: bolder;
-          margin: 10px;
-          font-size: 40px;
-      }
-
-      .menu_item {
-          margin-top: -20px;     
-      }
-
-      .profile_widget {
-          /* border: 3px solid #46593f; */
-          background-color: white;
-          border-radius: 15%;
-          box-shadow: 0 0 8px rgb(56, 77, 48);
-        }
-
-      .maps_widget {
-          /* border: 3px solid rgb(139, 0, 93); */
-          background-color: white;
-          border-radius: 15%;
-          box-shadow: 0 0 8px rgb(56, 77, 48);
-
-      }
-
-          .weather_widget {
-          /* border: 3px solid purple; */
-          background-color: white;
-          border-radius: 15%;
-          box-shadow: 0 0 8px rgb(56, 77, 48);
-
-      }
-
-      .calendar_widget {
-          /* border: 3px solid green; */
-          background-color: white;
-          border-radius: 15%;
-          box-shadow: 0 0 8px rgb(56, 77, 48);
-
-      }
-
-      .emercency_services_widget {
-          /* border: 3px solid salmon; */
-          background-color: white;
-          border-radius: 15%;
-          box-shadow: 0 0 8px rgb(56, 77, 48);
-
-      }
-
-      .forum_widget {
-          /* border: 3px solid green; */
-          background-color: white;
-          border-radius: 15%;
-          box-shadow: 0 0 8px rgb(56, 77, 48);
-
-      }
-
-      .attractions_widget {
-          /* border: 3px solid salmon; */
-          background-color: white;
-          border-radius: 15%;
-          box-shadow: 0 0 8px rgb(56, 77, 48);
-
-      }
-
-      .item {
-          grid-row: 1 / span 1;
-      }
-
-      .item1 {
-          grid-column: 2 / span 1;
-          grid-row: 1 / span 2;
-      }
-
-      .item2 {
-          grid-column: 3 / span 2;
-          grid-row: 1 / span 3;
-          /* grid-row: 4 / span 2; */
-
-      }
-
-      .item3 {
-          grid-column: 5 / span 1;
-          grid-row: 1 / span 2;
-
-      }
-
-      .item4 {
-          grid-column: 1 / span 2;
-
-          grid-row: 3 / span 2;
-
-          /* grid-column: 3 / span 1; */
-      }
-
-      .item5 {
-          grid-column: 1 / span 2;
-
-          grid-row: 5 / span 1;
-
-          /* grid-column: 3 / span 1; */
-      }
-
-
-      .item6 {
-          grid-column: 3 / span 2;
-          grid-row: 4 / span 2;
-      }
-
-      .item7 {
-          grid-column: 5 / span 1;
-          grid-row: 3 / span 3;
-
-      }
-
 /* Map */
 /* Map */
 /* Map */
@@ -404,6 +274,7 @@ label {
 #map {
 font-family: Arial, Helvetica, sans-serif;
 }
+
 
 /* Weather */
 /* Weather */
@@ -413,7 +284,7 @@ font-family: Arial, Helvetica, sans-serif;
 display: none;
 }
 
-.notification p{
+.notification p {
 color: #d40c20;
 font-size: 20px;
 margin: 0;
@@ -421,35 +292,47 @@ text-align: center;
 padding: 0 0;
 }
 
-.weather-container{
-width: 325px;
-height: 190px;
+.weather-container {
+  margin: 0;
+  padding: 0;
+  width: 325px;
+  height: 290px;
 }
 
-.location p{
+p.weather-city{
+  margin: 0;
+  padding: 0;
+}
+
+.location p {
 margin: 0;
-padding: 10px;
 color: #293251;
 text-align: center;
 font-size: 20px;
 }
 
-.weather-icon{
-width: 300px;
-height: 100px;
+/* weather icon size */
+/* weather icon size */
+/* weather icon size */
+
+.weather-icon {
+width: 100px;
+height: 80px;
+margin: 0;
+padding: 0;
 }
 
 .weather-icon img{
-display: block;
+/* display: block; */
 margin: 0 auto;
 }
 
-.temperature-value{
-width: 300px;
-height: 20px;
+.temperature-value {
+/* width: 300px;
+height: 20px; */
 }
 
-.temperature-value p{
+.temperature-value p {
 padding: 0;
 margin: 0;
 color: #293251;
@@ -466,8 +349,8 @@ font-size: 20px;
 }
 
 .temperature-description p{
-/* padding: 8px; */
 margin: 0;
+padding: 0;
 color: #293251;
 text-align: center;
 font-size: 20px;
