--- a/profile.ejs
+++ b/profile.ejs
@@ -1,18 +1,30 @@
 <%- include('includes/header') %>
 
-<div class="container py-md-5 container--narrow">
+  <article class="flexContainer">
+    <div>
+      <img class="menu_icon item" src="/images/menu_icon.png">
+    </div>
+    <div class="title">
+      <h1 class="title">Profile</h1>
+    </div>
+  </article>
 
-  <%- include('includes/flash') %>
-  <%- include('includes/profileShared') %>
+  <div class="container py-md-5 container--narrow">
 
-  <div  class="list-group">
-    <% posts.forEach(function(post) { %>
-      <a href="/post/<%= post._id %>" class="list-group-item list-group-item-action">
-        <img class="avatar-tiny" src="<%= post.author.avatar %>">
-        <strong><%= post.title %></strong> on <%= post.createdDate.getMonth() + 1 %>/<%= post.createdDate.getDate() %>/<%= post.createdDate.getFullYear() %>
-      </a>
-    <% }) %>
+    <%- include('includes/flash') %>
+      <%- include('includes/profileShared') %>
+
+        <div class="list-group">
+          <% posts.forEach(function(post) { %>
+            <a href="/post/<%= post._id %>" class="list-group-item list-group-item-action">
+              <img class="avatar-small" src="<%= post.author.avatar %>">
+              <strong>
+                <%= post.title %>
+              </strong> on <%= post.createdDate.getMonth() + 1 %>/<%= post.createdDate.getDate() %>/<%=
+                    post.createdDate.getFullYear() %>
+            </a>
+            <% }) %>
+        </div>
   </div>
-</div>
 
-<%- include('includes/footer') %>
+  <%- include('includes/footer') %>
